# aiogram-bot-template

./: README.md  env.example  pyproject.toml
app/: config.py  main.py
app/errors/: __init__.py  error_handler.py
app/handlers/: __init__.py  channels.py  commands.py  echo.py  groups.py  users.py
app/keyboards/: keyboards.py
app/middlewares/: __init__.py
app/utils/: database.py  logger.py
